mysql-5.6 (5.6.20-1~exp1) experimental; urgency=low
  [ Norvald H. Ryeng ]
  * Remove unused build options.
  * Add libedit dependency to mysql-client-core-5.6.
  * Remove chmods not needed after fix for upstream bug #68517.
  * Lintian fixes.

  [ Bjoern Boschman ]
  * New upstream release.

  [ Robie Basak ]
  * Add dep8 smoke test.
  * Re-enable libmysqld-pic, libmysqld-dev, libmysqlclient18 and
    libmysqlclient-dev (renamed accordingly) to replace binary packages
    provided by src:mysql-5.5.
  * Add mysql-server, mysql-client and mysql-testsuite to be switched
    over from src:mysql-5.5.
  * Import mysql-commom from src:mysql-5.5 for 5.5 -> 5.6 switchover.
  * Cherry-pick relevant parts of Ubuntu delta from mysql-5.5:
    - d/mysql-server-5.5.postrm: restoring postrm debhelper token to get
      proper behaviors from dh_installinit and dh_apparmor.
    - Add Apport hook.
  * Temporarily disable upstream testsuite dep8 test.

 -- Bjoern Boschman <bjoern@boschman.de>  Tue, 26 Aug 2014 11:43:32 +0200

mysql-5.6 (5.6.19-1~exp1) experimental; urgency=low

  [ Bjoern Boschman ]
  * SECURITY UPDATE: New upstream release (LP: #1330168).
    - www.oracle.com/technetwork/topics/security/cpujul2014-1972956.html
    - CVE-2014-2484
    - CVE-2014-4258
    - CVE-2014-4260
    - CVE-2014-4238
    - CVE-2014-4233
    - CVE-2014-4240
    - CVE-2014-4214

 -- James Page <james.page@ubuntu.com>  Mon, 21 Jul 2014 14:01:12 +0100

mysql-5.6 (5.6.17-1~exp1) experimental; urgency=medium

  * SECURITY UPDATE: New upstream release (Closes: #744970).
    - http://www.oracle.com/technetwork/topics/security/cpuapr2014-1972952.html
    - CVE-2014-0001
    - CVE-2014-2430
    - CVE-2014-2431
    - CVE-2014-2435
    - CVE-2014-2436
    - CVE-2014-2440
  * d/p/CVE-2014-0001.patch: Dropped, included in security update.

 -- James Page <jamespage@debian.org>  Fri, 25 Apr 2014 08:06:10 +0100

mysql-5.6 (5.6.16-1~exp1) experimental; urgency=medium

  * New upstream point release: