@@ -13,7 +13,6 @@ Build-Depends:
  debhelper (>= 8.1.3~),
  dh-apparmor,
  gawk,
- hardening-wrapper,
  libaio-dev[linux-any],
  libedit-dev,
  libncurses5-dev (>= 5.0-6),
@@ -228,8 +227,9 @@ Architecture: any
 Depends:
  mysql-client-5.6 (= ${binary:Version}),
  mysql-server-5.6 (= ${binary:Version}),
+ python,
  ${misc:Depends},
- ${shlibs:Depends}
+ ${shlibs:Depends},
 Provides: virtual-mysql-testsuite
 Breaks: mysql-testsuite-5.5, virtual-mysql-testsuite
 Replaces: mysql-testsuite-5.5, virtual-mysql-testsuite
