@@ -1,4 +1,5 @@
 mysql-5.6 (5.6.20-1~exp1) experimental; urgency=low
+
   [ Norvald H. Ryeng ]
   * Remove unused build options.
   * Add libedit dependency to mysql-client-core-5.6.
@@ -7,6 +8,8 @@ mysql-5.6 (5.6.20-1~exp1) experimental; urgency=low
 
   [ Bjoern Boschman ]
   * New upstream release.
+  * Removed hardening-wrapper from build-deps.
+  * Added python dep for mysql-testsuite-5.6.
 
   [ Robie Basak ]
   * Add dep8 smoke test.
@@ -22,7 +25,7 @@ mysql-5.6 (5.6.20-1~exp1) experimental; urgency=low
     - Add Apport hook.
   * Temporarily disable upstream testsuite dep8 test.
 
- -- Bjoern Boschman <bjoern@boschman.de>  Tue, 26 Aug 2014 11:43:32 +0200
+ -- Bjoern Boschman <bjoern@boschman.de>  Wed, 03 Sep 2014 10:57:11 +0200
 
 mysql-5.6 (5.6.19-1~exp1) experimental; urgency=low
 
